Fix error in article CSS spacing and remove margins at smaller screens

--- a/medor/static/medor/less/grid.less
+++ b/medor/static/medor/less/grid.less
@@ -49,6 +49,11 @@ article {
 }
 article > p, article > figure, article > ol, article > h3, article > h2, article > blockquote, article > aside {
     .w4;
-    margin: 0 auto;
+}
+
+@media only screen and (max-width: 780px) {
+  article > p, article > figure, article > ol, article > h3, article > h2, article > blockquote, article > aside {
+      .w6;
+  }
 }
 
